feat: call service scan on upload

--- a/public/filebrowser.html
+++ b/public/filebrowser.html
@@ -10,7 +10,7 @@
   <span id="buttons">
     <input id="folderName" type="text" placeholder="Enter Directory Name"></input>
     <button onclick="createFolder()">Create Folder</button>
-    <button onclick="$('#uploadInput').trigger( 'click' )">Upload Files</button>
+    <button id="uploadFileButton" onclick="$('#uploadInput').trigger( 'click' )">Upload Files</button>
     <input class="hidden" id="uploadInput" type='file' onchange="upload(this);" multiple>
   </span>
   <div id="filebrowser"></div>
