--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,14 @@
         src="public/css/speaker.svg"
         onclick="audio()"
       />
+
+      <img
+        class="icons"
+        id="audioButton"
+        title="Enable Record"
+        src="public/css/mic.svg"
+        onclick="record()"
+      />
     </div>
     <!--File Browser-->
     <div id="files">
@@ -52,6 +60,7 @@
       <div class="close" onclick="closeToggle('#files')"></div>
     </div>
     <!--Main logic-->
+
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/kclient.js"></script>
   </body>
