feat: record audio from client

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,13 @@
         id="audioButton"
         title="Enable Record"
         src="public/css/mic.svg"
-        onclick="record()"
+        onclick="recordClient()"
       />
+      <button id="startRecording" onclick="startRecord()">
+        Start Recording
+      </button>
+      <button id="stopRecording" onclick="stopRecord()">Stop Recording</button>
+      <audio id="audioPlayer" controls></audio>
     </div>
     <!--File Browser-->
     <div id="files">
